WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221985
REGRESSION: [ Mac WK2 ] fast/mediastream/audio-track-enabled.html is flaky failing
https://bugs.webkit.org/show_bug.cgi?id=221985
Summary
REGRESSION: [ Mac WK2 ] fast/mediastream/audio-track-enabled.html is flaky fa...
Truitt Savell
Reported
2021-02-16 12:07:41 PST
fast/mediastream/audio-track-enabled.html This test began flaky failing somewhere around
r272848
. it is highly intermittent so the regression point could be anywhere in the last 30 revisions before this point history:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2Faudio-track-enabled.html
Diff: --- /Volumes/Data/slave/bigsur-release-tests-wk2/build/layout-test-results/fast/mediastream/audio-track-enabled-expected.txt +++ /Volumes/Data/slave/bigsur-release-tests-wk2/build/layout-test-results/fast/mediastream/audio-track-enabled-actual.txt @@ -1,4 +1,4 @@ -PASS Check audio session state in case of disabled and stopped audio tracks +FAIL Check audio session state in case of disabled and stopped audio tracks assert_equals: expected "AmbientSound" but got "None"
Attachments
Patch
(3.67 KB, patch)
2021-05-14 13:39 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-16 12:07:58 PST
<
rdar://problem/74401281
>
Amir Mark Jr
Comment 2
2021-04-14 17:34:15 PDT
Updated test expectations. This is also affecting EWS.
https://trac.webkit.org/changeset/275983/webkit
Peng Liu
Comment 3
2021-04-29 14:46:32 PDT
This test sometimes crashes on bot Apple-iOS-14-Simulator-Debug-WK2-Tests stderr: ASSERTION FAILED: Unhandled message RemoteRemoteCommandListenerProxy_UpdateSupportedCommands to 103 assertionFailureDueToUnreachableCode /Volumes/Data/worker/ios-simulator-14-debug/build/WebKitBuild/Debug-iphonesimulator/DerivedSources/WebKit2/GPUConnectionToWebProcessMessageReceiver.cpp(132) : virtual void WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) 1 0x11efd5119 WTFCrash 2 0x1094d5c45 WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 3 0x108d078c4 IPC::Connection::dispatchMessage(IPC::Decoder&) 4 0x108d080ac IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 5 0x108d08700 IPC::Connection::dispatchOneIncomingMessage() 6 0x108d28bd8 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_10::operator()() 7 0x108d28ace WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_10, void>::call() 8 0x11f000f72 WTF::Function<void ()>::operator()() const 9 0x11f084295 WTF::RunLoop::performWork() 10 0x11f088b51 WTF::RunLoop::performWork(void*) 11 0x103c1837a __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 12 0x103c18272 __CFRunLoopDoSource0 13 0x103c17754 __CFRunLoopDoSources0 14 0x103c11f1f __CFRunLoopRun 15 0x103c116c6 CFRunLoopRunSpecific 16 0x1035ff7b9 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 17 0x1035ff9cd -[NSRunLoop(NSRunLoop) run] 18 0x10552c176 _xpc_objc_main 19 0x10552e115 xpc_main 20 0x1099e8c8b WebKit::XPCServiceMain(int, char const**) 21 0x10b1191ab WKXPCServiceMain 22 0x103430d52 main 23 0x1051d9409 start LEAK: 1 WebPageProxy
Peng Liu
Comment 4
2021-04-30 09:18:35 PDT
(In reply to Peng Liu from
comment #3
)
> This test sometimes crashes on bot Apple-iOS-14-Simulator-Debug-WK2-Tests > > stderr: > ASSERTION FAILED: Unhandled message > RemoteRemoteCommandListenerProxy_UpdateSupportedCommands to 103 > assertionFailureDueToUnreachableCode > /Volumes/Data/worker/ios-simulator-14-debug/build/WebKitBuild/Debug- > iphonesimulator/DerivedSources/WebKit2/ > GPUConnectionToWebProcessMessageReceiver.cpp(132) : virtual void > WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection &, > IPC::Decoder &) > 1 0x11efd5119 WTFCrash > 2 0x1094d5c45 > WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, > IPC::Decoder&) > 3 0x108d078c4 IPC::Connection::dispatchMessage(IPC::Decoder&) > 4 0x108d080ac > IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, > std::__1::default_delete<IPC::Decoder> >) > 5 0x108d08700 IPC::Connection::dispatchOneIncomingMessage() > 6 0x108d28bd8 > IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, > std::__1::default_delete<IPC::Decoder> >)::$_10::operator()() > 7 0x108d28ace > WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std:: > __1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> > >)::$_10, void>::call() > 8 0x11f000f72 WTF::Function<void ()>::operator()() const > 9 0x11f084295 WTF::RunLoop::performWork() > 10 0x11f088b51 WTF::RunLoop::performWork(void*) > 11 0x103c1837a __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ > 12 0x103c18272 __CFRunLoopDoSource0 > 13 0x103c17754 __CFRunLoopDoSources0 > 14 0x103c11f1f __CFRunLoopRun > 15 0x103c116c6 CFRunLoopRunSpecific > 16 0x1035ff7b9 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] > 17 0x1035ff9cd -[NSRunLoop(NSRunLoop) run] > 18 0x10552c176 _xpc_objc_main > 19 0x10552e115 xpc_main > 20 0x1099e8c8b WebKit::XPCServiceMain(int, char const**) > 21 0x10b1191ab WKXPCServiceMain > 22 0x103430d52 main > 23 0x1051d9409 start > LEAK: 1 WebPageProxy
Will fix this in
bug 225234
.
Peng Liu
Comment 5
2021-05-13 15:55:59 PDT
I can reproduce the failure locally with the following command: run-webkit-tests --no-build --order=random fast/mediastream/audio-track-enabled.html webaudio/web-audio-is-playing.html --iterations=50 -f
Peng Liu
Comment 6
2021-05-13 16:02:20 PDT
The root cause of this flaky failure seems to be the interferences with web audio tests. Eric confirmed that it is possible because WKTR enables "Media in GPU Process" by default and AudioSession runs in the GPU Process now.
Peng Liu
Comment 7
2021-05-13 21:50:29 PDT
Looks like the real issue is that a WebContent process does not reset the category of the shared audio session before it loads a new page. Working on a patch to fix that.
Peng Liu
Comment 8
2021-05-14 13:39:34 PDT
Created
attachment 428650
[details]
Patch
EWS
Comment 9
2021-05-14 16:46:18 PDT
Committed
r277519
(
237748@main
): <
https://commits.webkit.org/237748@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428650
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug